<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding_all"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/main.et.email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:hint="@string/main_et_email" />

    <EditText
        android:id="@+id/main.et.pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main.et.email"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:hint="@string/main_et_pwd" />

    <TextView
        android:id="@+id/main.tv.one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main.et.pwd"
        android:layout_toLeftOf="@id/main.view"
        android:layout_toStartOf="@id/main.view"
        android:text="@string/main_tv_one" />

    <View
        android:id="@+id/main.view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main.et.pwd"
        android:layout_marginLeft="@dimen/main_margin_separator"
        android:layout_marginStart="@dimen/main_margin_separator"
        android:layout_marginRight="@dimen/main_margin_separator"
        android:layout_marginEnd="@dimen/main_margin_separator"/>

    <TextView
        android:id="@+id/main.tv.two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main.et.pwd"
        android:layout_toRightOf="@id/main.view"
        android:layout_toEndOf="@id/main.view"
        android:text="@string/main_tv_two" />

    <Button
        android:id="@+id/main.btn.enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main.view"
        android:layout_marginTop="@dimen/main_margin_separator"
        android:text="@string/main_btn_enter" />

</RelativeLayout>